--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,64 @@
 <html>
 <head>
 	<title>My web page</title>
+<link rel="stylesheet"  href="style.css">
 </head>
 <body>
-	Hello,World hello again hello hello hello
+	<h1>Heool world</h1>
+	An order list 
+	<p>welcome to new web page</p>
+	<p1>welcome to new web page</p1>
+	
+	<ul>
+		<li>asd 1</li>
+		<li>asd 2</li>
+		<li>asd 3</li>
+	</ul>
 
+	ordered list 
+	<ol>
+		<li>asd 2</li>
+		<li>asd 3</li>
+		<li>asd 4</li>
+
+	</ol>
+	<img src="abc.jpeg" width ="50%">
+<table>
+
+<tr>
+	<th>first </th>
+	<th>last </th>
+	<th>middle </th>
+</tr>
+
+<tr>
+	<td>haseeb</td>
+	<td>naseeb </td>
+	<td>something</td>
+</tr>
+
+<tr>
+	<td>vvhaseeb</td>
+	<td> ccnaseeb </td>
+	<td> something</td>
+</tr>
+</table>
+
+<form>
+	<input type = "text" placeholder ="Full Name" name="name">
+	<button>Sumbit</button>
+
+</form>
+<div id = "top">
+this is the  <span class="name">top</span>
+</div>
+
+<div id = "middle">
+this is the  <span class="name">Middle</span>
+</div>
+
+<div id = "bottom">
+this is the  <span class="name">Bottom</span>
+</div>
 </body>
 </html>
